--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Autoreparatur HTML-Vorlage</title>
+    <title>Nitro Auto Service</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/nitro_service.svg" rel="icon">
 
     <!-- Google Web Schriftarten -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
